Changes in QMPlay2 build 16.11.18:
	- VA-API displays using OpenGL (default behavior),
	- updated German translation (martinkg),
	- add DXVA2 decoder (limited features),
	- fix seeking on interlaced videos,
	- CUVID bugfix,

Changes in QMPlay2 build 16.11.01:
	- properly read styles from MPL, MicroDVD and SubRip format,
	- add CUVID decoder,
	- bugfix,

Changes in QMPlay2 build 16.10.14:
	- fix issue (deadlock/crash) if playback has been stopped when FFmpeg resolves a hostname,
	- PortAudio fixes (especially for Windows),
	- better finding subtitles files for video,
	- bugfix,

Changes in QMPlay2 build 16.09.24:
	- use namespace on libmodplug - don't mix system and QMPlay2 modplug,
	- fix screen saver inhibition regression,

Changes in QMPlay2 build 16.09.21:
	- updated icon for YouTube quality button,
	- fix screen saver blocking behavior,
	- OpenGL2 bugfix,

Changes in QMPlay2 build 16.09.04:
	- don't load subtitles which needs decoder without the decoder,
	- add checkbox to disable PBO in OpenGL2 module settings,
	- fix displaying multi-line graphical subtitles,
	- don't crop non-graphics subtitles on zoom,
	- add quality button in YouTube browser,
	- download "youtube-dl" if necessary,
	- get rid of "QtNetwork" module,
	- add MPEG-TS programs support,

Changes in QMPlay2 build 16.08.19:
	- add key shortcuts editor to Settings (thanks Zamarin Arthur for help),
	- respect HTML tags in classic subtitles,
	- use scroll area for equalizer sliders,
	- add presets to equalizer,
	- playlist bugfix,
	- OpenGL2 bugfix,

Changes in QMPlay2 build 16.07.20:
	- don't fetch the stream url twice on add and play action (speed up YouTube video opening),
	- move most settings Ui from C++ to Qt forms (thanks Zamarin Arthur for help),
	- play the entire audio if playback has been finished (don't drop samples),
	- block screen saver also on full screen when only audio is playing,
	- add sharpness to video adjustment (OpenGL2 and VDPAU only),