@@ -944,6 +944,14 @@ amp</source>
         <source>Buffer</source>
         <translation>Tampon</translation>
     </message>
+    <message>
+        <source>interlaced</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>visible</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>Inputs</name>
