@@ -40,22 +40,22 @@ public:
 	InfoDock();
 public slots:
 	void setInfo(const QString &, bool, bool);
-	void updateBitrate(int, int, double);
+	void updateBitrateAndFPS(int a, int v, double fps, double realFPS, bool interlaced);
 	void updateBuffered(qint64 backwardBytes, qint64 remainingBytes, double backwardSeconds, double remainingSeconds);
 	void clear();
 	void visibilityChanged(bool);
 private:
-	void setBRLabels();
+	void setLabelValues();
 	void setBufferLabel();
 
 	QWidget mainW;
 	QGridLayout *layout;
-	QLabel *bitrate, *buffer;
+	QLabel *bitrateAndFPS, *buffer;
 	TextEdit *infoE;
 
-	bool videoPlaying, audioPlaying;
+	bool videoPlaying, audioPlaying, interlacedVideo;
 	int audioBR, videoBR;
-	double videoFPS;
+	double videoFPS, videoRealFPS;
 	qint64 bytes1, bytes2;
 	double seconds1, seconds2;
 signals:
