@@ -1,4 +1,5 @@
 Changes in QMPlay2 build 16.11.18:
+	- display real FPS and interlaced video information on Information panel,
 	- VA-API displays using OpenGL (default behavior),
 	- updated German translation (martinkg),
 	- add DXVA2 decoder (limited features),
